--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="content">
             <span> 2014 - 2016(SSC) </span>
             <h3>Monipur high school</h3>
-            <p>CGPA:2.23
+            <p>CGPA:4.39
             </p>
           </div>
         </div>
@@ -122,17 +122,17 @@
             <span> 2016 - 2018 (HSC)</span>
             <h3>Monipur school & collage</h3>
             <p>
-              CGPA:KONO ROKOM PASSED
+              CGPA:3.08
             </p>
           </div>
         </div>
 
         <div class="box">
           <div class="content">
-            <span> 2019 - 2022 </span>
-            <h3>BSc in CSE</h3>
+            <span> 2019 - 2022(BSc in CSE) </span>
+            <h3> DAFFODIL INTERNATIONAL UNIVERSITY</h3>
             <p>
-              DAFFODIL INTERNATIONAL UNIVERSITY
+             CGPA:2.95
             </p>
 
           </div>
@@ -161,7 +161,7 @@
         <div class="icons">
           <i class="fas fa-map-marker-alt"></i>
           <h3>my address</h3>
-          <p>mirpur-14,vasantek bosti</p>
+          <p>Mirpur-14,DHAKA</p>
         </div>
       </div>
 
